--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,7 +9,7 @@ Price: <%= format_price @product.price %>
 Quantity: <%= @product.quantity %>
 <br />
 <%# TODO: Format the date time to make it more readable %>
-Posted on: <%= @product.created_at %>
+Posted on: <%= @product.created_at.strftime("%d %B %Y") %>
 <br />
 <%# TODO: Calculate average rating based on the reviews from all of the product's purchases %>
 Average rating: TODO
