--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,20 +2,25 @@
 
 <%= form_with model: @product, local: true do |f| %>
   <div style="margin-top: 10px;">
+    <div><%= f.label :store_id %></div>
+      <%= f.select :store_id, options_from_collection_for_select(@store, 'id', 'name', :selected=> f.object.store_id), {:include_blank => '-- Choose Store --'} %>
+  </div>
+
+  <div style="margin-top: 10px;">
     <div><%= f.label :name %><div>
     <%= f.text_field :name %>
   </div>
-  
+
   <div style="margin-top: 10px;">
     <div><%= f.label :price %><div>
     <%= f.text_field :price %>
   </div>
-  
+
   <div style="margin-top: 10px;">
     <div><%= f.label :quantity %><div>
     <%= f.text_field :quantity %>
   </div>
-  
+
   <div style="margin-top: 14px;">
     <%= f.submit "Create" %>
   </div>
