--- a/app/views/purchases/show.html.erb
+++ b/app/views/purchases/show.html.erb
@@ -32,7 +32,7 @@ Purchased at: <%= @purchase.created_at.strftime("%d-%m-%Y %H:%M") %>
   </div>
   <div class="box-body">
     <div class="table-responsive">
-      <table id="review_table" class="table table-bordered table-striped">
+      <table id="review_table" class="table table-bordered table-striped" border="1">
         <thead>
           <tr>
             <th style="width: 10%;">Rating</th>
